@startuml

class Board {
	+ Board() 
	+ void reset() 
	+ boolean isComplete(Color)
	- Coordinate[] getCoordinates(Color)
	+ void putToken(Coordinate, Color)
	+ void moveToken(Coordinate, Coordinate) 
	- Color getColor(Coordinate) 
	+ boolean isOccupied(Coordinate, Color) 
	+ boolean isEmpty(Coordinate)
	+ boolean isTicTacToe(Color) 
	- Direction[] getDirections(Color)
	+ void write()
	+ boolean isComplete(Color)
}

enum Color {
	X,
	O,
	NULL
	+ {static} Color get(int)
	+ void write() 
	+ boolean isNull()
}


class Coordinate {
	- {static} int DIMENSION = 3
	- int row
	- int column
	+ {static} int getDimension()
	+ Coordinate() 
	+ Coordinate(int, int) 
	+ Direction getDirection(Coordinate)
	- boolean inHorizontal(Coordinate)
	- boolean inVertical(Coordinate)
	- boolean inMainDiagonal() 
	- boolean inInverseDiagonal() 
	+ void read(String)
	+ String getErrorMessage() 
	+ int getRow()
	+ int getColumn()
	+ boolean equals(Coordinate)
}

enum Direction {
	VERTICAL,
	HORIZONTAL,
	MAIN_DIAGONAL,
	INVERSE_DIAGONAL,
	NULL
	+ boolean isNull() 
}

enum Error {
	NOT_EMPTY
	NOT_OWNER
	SAME_COORDINATES
	WRONG_COORDINATES
	NULL
	- String message
	- Error()
	- Error(String)
	+ void writeln()
	+ boolean isNull()
}

class Player {
	+ Player(Color, Board)
	+ void play() 
	- void putToken()
	- Coordinate getCoordinate(Message) 
	- Error getPutTokenError(Coordinate)
	- void moveToken() 
	- Error getOriginMoveTokenError(Coordinate) 
	- Error getTargetMoveTokenError(Coordinate, Coordinate)
	+ void writeWinner() 
	+ Color getColor() 
}

class TicTacToe {
	- TicTacToe() 
	- void play() 
	- void playGame() 
	- boolean isResumedGame() 
	+ {static} void main(String[])
}

class Turn {
	- {static} int NUMBER_PLAYERS = 2
	- int activePlayer
	+ Turn(Board) 
	+ void reset()
	+ void play()
	+ void writeWinner()
	+ Color getActiveColor() 
}

TicTacToe *-down-> Turn : turn
TicTacToe *-down-> Board : board
Turn *-down-> "2" Player : players
Player -down-> Board : board
Player -down-> Color : color
Player ..> Error
Board *-down-> "3x3" Color
Board ..> Coordinate
Board ..> Direction
Coordinate ..> Direction
@enduml